# icub-basic-demos

./: .travis.yml  CMakeLists.txt  README.md  index.html
.github/workflows/: ci.yml  conda-ci.yml  gh-pages.yml
demoForceControl/: CMakeLists.txt
demoForceControl/app/scripts/: demoForceControl.xml.template
demoForceControl/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  robot_interfaces.cpp  robot_interfaces.h
demoForceImitation/: .gitignore  CMakeLists.txt
demoForceImitation/app/scripts/: demoForceImitation.xml.template
demoForceImitation/src/: main.cpp  robot_interfaces.cpp  robot_interfaces.h
demoLookSkin/: CMakeLists.txt
demoLookSkin/src/: main.cpp
demoRedBall/: CMakeLists.txt  doc.dox
demoRedBall/app/conf/: config-gazebo.ini  config-test.ini  config.ini  config_Stereo.ini  speech_Chinese.ini  speech_English.ini  speech_Italian.ini
demoRedBall/app/scripts/: acquireData.xml.template  demoRedBall.xml.template  demoRedBall_BottomUp.xml.template  demoRedBall_Breathers.xml.template  demoRedBall_Breathers_LookSkin.xml.template  demoRedBall_Stereo.xml.template  demoRedBall_gazebo.xml.template
demoRedBall/gazebo/: CMakeLists.txt
demoRedBall/gazebo/models/red-ball/: model.config  model.sdf
demoRedBall/gazebo/worlds/: grasp-ball-gazebo.sdf
demoRedBall/src/: main.cpp  world.cpp
demoYoga/: CMakeLists.txt
demoYoga/app/conf/: crf.ini  hannover.ini  two-hands.ini  yoga.ini
demoYoga/app/conf/hannover/: right_leg.ini
demoYoga/src/: main.cpp
doxygen/: generate.txt  groups.dox
doxygen/doc/html/: FastGauss_8cpp.html  FastGauss_8cpp_source.html  FastGauss_8h.html  FastGauss_8h_source.html  IIRFilt_8cpp_source.html  IIRFilt_8h.html  IIRFilt_8h_source.html  IIRGausDeriv_8cpp.html  IIRGausDeriv_8cpp_source.html  IIRGausDeriv_8h.html  IIRGausDeriv_8h_source.html  README_8md_source.html  ScaleSpace_8cpp.html  ScaleSpace_8cpp_source.html  ScaleSpace_8h.html  ScaleSpace_8h_source.html  _formulas.tex  _formulas_dark.tex  acquireData_8m_source.html  annotated.html  classes.html  cvfloodfill2_8cpp_source.html  demoForceControl_2src_2main_8cpp_source.html  demoForceControl_2src_2robot__interfaces_8cpp_source.html  demoForceControl_2src_2robot__interfaces_8h_source.html  demoForceImitation_2src_2main_8cpp_source.html  demoForceImitation_2src_2robot__interfaces_8cpp_source.html  demoForceImitation_2src_2robot__interfaces_8h_source.html  demoRedBall_2src_2main_8cpp_source.html  demoYoga_2src_2main_8cpp_source.html  dir_09c3d1dd163a66c44752029483303db0.html  dir_11110cf4ec97ab9f4ccc991ff6fd73d9.html  dir_16f69bce6b508aa996db90e545a71f98.html  dir_17fdcf4fd6dbc5dc3a4c390b4cb323f2.html  dir_24edfe2b9091337dacb04c2225681c6a.html  dir_3b22bad5c1bf11cca84db4574fa99c00.html  dir_461bc6e266c40caf4deffca7b613e586.html  dir_46844ca6f7a7f72255313000c6b6b85e.html  dir_5ba73ae6ed0b41c8033623abea2a8464.html  dir_5ec8fd5ae47fc4cf5bf3f1d9d508f559.html  (+51 more)
doxygen/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_5.js  pages_6.js  pages_7.js  pages_8.js  pages_9.js  searchdata.js  variables_0.js
doxygen/doc/latex/: FastGauss_8cpp.tex  FastGauss_8cpp_source.tex  FastGauss_8h.tex  FastGauss_8h_source.tex  IIRFilt_8cpp_source.tex  IIRFilt_8h.tex  IIRFilt_8h_source.tex  IIRGausDeriv_8cpp.tex  IIRGausDeriv_8cpp_source.tex  IIRGausDeriv_8h.tex  IIRGausDeriv_8h_source.tex  ScaleSpace_8cpp.tex  ScaleSpace_8cpp_source.tex  ScaleSpace_8h.tex  ScaleSpace_8h_source.tex  acquireData_8m_source.tex  annotated.tex  cvfloodfill2_8cpp_source.tex  demoForceControl_2src_2main_8cpp_source.tex  demoForceControl_2src_2robot__interfaces_8cpp_source.tex  demoForceControl_2src_2robot__interfaces_8h_source.tex  demoForceImitation_2src_2main_8cpp_source.tex  demoForceImitation_2src_2robot__interfaces_8cpp_source.tex  demoForceImitation_2src_2robot__interfaces_8h_source.tex  demoRedBall_2src_2main_8cpp_source.tex  demoYoga_2src_2main_8cpp_source.tex  dir_09c3d1dd163a66c44752029483303db0.tex  dir_11110cf4ec97ab9f4ccc991ff6fd73d9.tex  dir_16f69bce6b508aa996db90e545a71f98.tex  dir_17fdcf4fd6dbc5dc3a4c390b4cb323f2.tex  dir_24edfe2b9091337dacb04c2225681c6a.tex  dir_461bc6e266c40caf4deffca7b613e586.tex  dir_46844ca6f7a7f72255313000c6b6b85e.tex  dir_5ba73ae6ed0b41c8033623abea2a8464.tex  dir_5ec8fd5ae47fc4cf5bf3f1d9d508f559.tex  dir_61b422eae39885bd24f8acba30ef5313.tex  dir_756642fb7df32f4fba8cd8cbf5208191.tex  dir_78c59be1348feda52106cbd20414be4b.tex  dir_811e15f64083e64bb2a9d8e860a70892.tex  dir_9ae835d45530d23e4ddf2ad0cc13b598.tex  (+36 more)
pf3dBottomup/: CMakeLists.txt
pf3dBottomup/include/iCub/: FastGauss.h  ScaleSpace.h  pf3dBottomup.hpp
pf3dBottomup/src/: FastGauss.cpp  IIRFilt.cpp  IIRGausDeriv.cpp  ScaleSpace.cpp  cvfloodfill2.cpp  main.cpp  pf3dBottomup.cpp
pf3dTracker/: CMakeLists.txt  README.md
pf3dTracker/app/conf/: pf3dTracker-gazebo.ini  pf3dTracker.ini
pf3dTracker/app/conf/models/: generate_shape_model.py  redball-gazebo.csv
pf3dTracker/include/iCub/: pf3dTracker.hpp  pf3dTrackerSupport.hpp
pf3dTracker/matlab_files/: README.md
pf3dTracker/src/: pf3dTracker.cpp  pf3dTrackerMain.cpp  pf3dTrackerSupport.cpp
